syntax = "proto3";

package pb;

option go_package = "barbershop/src/pb/barber";


message GetPermissionFromBarberShopRequest {
    string barber_id = 1;
    string barber_shop_id = 2;
}

message GetPermissionFromBarberShopResponse {
    repeated string permission = 1;
}